Faild Facebook FireBase

--- a/ReactNative/Altair/android/app/src/main/res/values/strings.xml
+++ b/ReactNative/Altair/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Altair</string>
+    <string name="facebook_app_id">2062148800736970</string>
+    <string name="fb_login_protocol_scheme">fb2062148800736970</string>
 </resources>
